# media

./: .gitignore
client/: CMakeLists.txt  client.pro  infoform.cpp  infoform.h  infoform.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  mediabase.cpp  mediabase.h  mediamp4.cpp  mediamp4.h  messageform.cpp  messageform.h  messageform.ui  qmediaplayer.cpp  qmediaplayer.h  recordfile.cpp  recordfile.h  ssltool.cpp  ssltool.h  ui.qrc  vlchelper.cpp  vlchelper.h  widget.cpp  widget.h  widget.ui
client/lib/: libcrypto.3.dylib  libssl.3.dylib
client/lib/engines-3/: capi.dylib  loader_attic.dylib  padlock.dylib
client/lib/ossl-modules/: legacy.dylib
client/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
server/: CMakeCache.txt  CMakeLists.txt  clear.sh  cmake_install.cmake  crypto.cpp  crypto.h  databasehelper.cpp  databasehelper.h  epoll.h  function.h  httpparser.cpp  httpparser.h  logger.cpp  logger.h  main  main.cpp  mysqlclient.cpp  mysqlclient.h  process.h  publiclib.h  server.h  socket.h  sqlite3client.cpp  sqlite3client.h  test  test.cpp  testgpt.cpp  thread.cpp  thread.h  threadpool.h  tool.cpp  videoplayerserver.h
server/sqlite3/lib/: libsqlite3.la
server/sqlite3/lib/pkgconfig/: sqlite3.pc
