project(server)
set(CMAKE_BUILD_TYPE Debug)
link_directories(${CMAKE_SOURCE_DIR}/sqlite3/lib)
include_directories(${CMAKE_SOURCE_DIR}/sqlite3/include)
add_executable(main main.cpp logger.cpp thread.cpp threadpool.cpp httpparser.cpp http_parser.c sqlite3client.cpp databasehelper.cpp mysqlclient.cpp)
target_link_libraries(main pthread sqlite3 mysqlclient)