cmake_minimum_required(VERSION 3.10)
project(server)
set(CMAKE_BUILD_TYPE Debug)
link_directories(${CMAKE_SOURCE_DIR}/sqlite3/lib)
link_directories(${CMAKE_SOURCE_DIR}/jsoncpp/lib)
include_directories(${CMAKE_SOURCE_DIR}/sqlite3/include)
include_directories(${CMAKE_SOURCE_DIR}/jsoncpp/include/json)
include_directories(/usr/include/openssl)
find_package(OpenSSL REQUIRED)

add_executable(main main.cpp logger.cpp thread.cpp threadpool.cpp httpparser.cpp http_parser.c sqlite3client.cpp databasehelper.cpp mysqlclient.cpp crypto.cpp)
target_link_libraries(main pthread sqlite3 mysqlclient OpenSSL::SSL jsoncpp)